# MicroFun

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  gitzip.sh  quadtree.md  quadtree.py  run.sh  structure.md
.github/: copilot-instructions.md
.github/instructions/: 1.md
docs/: AsyncTileLoader_Usage.md  Report.md  Slides.md  Slides.txt
lib/: CMakeLists.txt
lib/include/: AsyncTileLoader.hpp  ColorChecker.hpp  EnhancedViewportAssembler.hpp  QuadTreeIndex.hpp  QuadTreeNode.hpp  QuadTreeSplitter.hpp  TileCache.hpp  TileIndex.hpp  TileSplitter.hpp  ViewportAssembler.hpp
lib/src/: AsyncTileLoader.cpp  ColorChecker.cpp  EnhancedViewportAssembler.cpp  QuadTreeIndex.cpp  QuadTreeNode.cpp  QuadTreeSplitter.cpp  TileCache.cpp  TileIndex.cpp  TileSplitter.cpp  ViewportAssembler.cpp  stb_image_all.cpp
tests/: CMakeLists.txt  performance_test.cpp
tools/: check_main.cpp  quadtree_index_test.cpp  quadtree_split_test.cpp  split_main.cpp
